--- a/calculator/index.html
+++ b/calculator/index.html
@@ -21,7 +21,7 @@
                     </path>
                 </svg>
             </button>
-            <button class="btn" onclick="pi('pi')">pi</button>
+            <button class="btn" onclick="appendToDisplay('3.14159')">pi</button>
             <button class="btn" onclick="appendToDisplay('7')">7</button>
             <button class="btn" onclick="appendToDisplay('8')">8</button>
             <button class="btn" onclick="appendToDisplay('9')">9</button>
@@ -46,5 +46,6 @@
 
         </section>
 
+        <script src="function.js"></script>
 </body>
 </html>
