--- a/note-app/index.html
+++ b/note-app/index.html
@@ -18,7 +18,7 @@
                     type="text" 
                     id="noteInput"
                     placeholder="Find notes..."
-                    class="search-note">
+                    class="search-note-input">
                 </input>
 
                 <div class="filter-note-group">
@@ -50,7 +50,7 @@
                                 fill-rule="evenodd" 
                                 d="M7.625 1c0 -0.345178 -0.27982 -0.625 -0.625 -0.625S6.375 0.654822 6.375 1v5.33496H1c-0.345178 0 -0.625 0.27982 -0.625 0.625s0.279822 0.625 0.625 0.625h5.375V13c0 0.3452 0.27982 0.625 0.625 0.625s0.625 -0.2798 0.625 -0.625V7.58496H13c0.3452 0 0.625 -0.27982 0.625 -0.625s-0.2798 -0.625 -0.625 -0.625H7.625V1Z" 
                                 clip-rule="evenodd" 
-                                stroke-width="1">\
+                                stroke-width="1">
                             </path>
                         </g>
                     </svg>
@@ -83,10 +83,11 @@
                     stroke-width="0.0625">
                 </path>
             </svg>
-
-            <h2>No Notes Yet</h2>
-            <p>Your notes will appear here once you add them.</p>
-            <p>Click the add button to add</p>
+            <div>
+                <h2>No Notes Yet</h2>
+                <p>Your notes will appear here once you add them.</p>
+                <p>Click the add note button to add</p>
+            </div>
         </div>
 
 
