--- a/note-app/index.html
+++ b/note-app/index.html
@@ -33,7 +33,7 @@
 
                 </div>
 
-                <button class="add-note-btn">
+                <button class="add-note-btn" id="addNoteBtn">
                     <svg 
                         xmlns="http://www.w3.org/2000/svg" 
                         fill="none" 
@@ -178,7 +178,7 @@
     
                     <div class="modal-actions">
                         <button id="saveNoteButton" class="save-button">Save Note</button>
-                        <button id="cancelNoteButton" class="cancel-button" onclick="">Cancel</button>
+                        <button id="cancelNoteButton" class="cancel-button">Cancel</button>
                     </div>
                
             </div>
